# slickconf

./: LICENSE  README.md  pyproject.toml
slickconf/: __init__.py  builder.py  config.py  constants.py  container.py  hooks.py  imports.py  loader.py  patch.py  patch_fn.py  pyconfig.py  selector.py  summarize.py  test.py  tree.py
tests/: eager_call.py  eager_call_config_fn.py  nested_dict.py  tag_conf.py
